fix cutoff image

--- a/src/index.css
+++ b/src/index.css
@@ -332,6 +332,10 @@ select {
     /* margin-left: 4rem; */
   }
 
+  .innerImages {
+    display: flex;
+  }
+
   .collectionImage {
     flex-shrink: 0;
     width: 30%;
